--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html>
   <head>
     <title>portfolio</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="./js/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
   </head>
   <body>
+
+    <div class="navbar">
+        <button>button1</button>
+    </div>
     <div class="head">
-      <h1>hello</h1>
+      <h1>Test word</h1>
     </div>
     
+    <div class="page">
+        <button>gfdg</button>
+
+    </div>
 
   </body>
 </html>
