--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>portfolio</title>
+    <title>My portfolio</title>
     <script src="./js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
   </head>
   <body>
 
     <div class="navbar">
-        <button>button1</button>
+        <a class="onPage">About Me</a>
+        <a>Work-Term Blogs</a>
+        <a>Contact Info</a>
     </div>
     <div class="head">
       <h1>Test word</h1>
     </div>
-    
     <div class="page">
-        <button>gfdg</button>
-
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Iste, quae vero blanditiis ducimus, quaerat animi facilis,
+            earum eum maiores modi veniam fugit quisquam veritatis 
+            magnam beatae quo consequatur laborum! Ratione!
+        </p>
     </div>
 
   </body>
