--- a/index.html
+++ b/index.html
@@ -6,23 +6,17 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
   </head>
   <body>
-
     <div class="navbar">
-        <a class="onPage">About Me</a>
-        <a>Work-Term Blogs</a>
-        <a>Contact Info</a>
+        <a class="onPage" >About Me</a>
+        <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
     </div>
     <div class="head">
       <h1>Test word</h1>
     </div>
     <div class="page">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Iste, quae vero blanditiis ducimus, quaerat animi facilis,
-            earum eum maiores modi veniam fugit quisquam veritatis 
-            magnam beatae quo consequatur laborum! Ratione!
-        </p>
+        <h1>Intro</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio maxime asperiores ducimus modi aperiam sequi nisi vel voluptatum vitae explicabo, in inventore numquam sint cumque sapiente sed ipsum dolorum est, aliquid atque dolorem. Nam quam, consectetur deleniti similique eius voluptatibus quidem incidunt nostrum provident illum. Maxime tempore ullam ducimus distinctio sapiente soluta architecto omnis est, minima minus modi vero id saepe at voluptatem a earum amet corporis culpa veritatis. Nisi distinctio perspiciatis sequi magni pariatur impedit atque, repellendus inventore suscipit nulla saepe omnis aspernatur alias necessitatibus quis numquam rerum sapiente tempora exercitationem ipsam eius ducimus laborum? Atque voluptate possimus nam.</p>
+        <h1>Career Goal</h1>
     </div>
-
   </body>
 </html>
