--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
     </div>
     <div class="head">
-      <h1>Test word</h1>
+      <h2>Hello! My name is</h2>
+      <h1>{NAME}</h1>
     </div>
     <div class="page">
         <h1>Intro</h1>
