--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
   </head>
   <body>
     <div class="navbar">
-        <a class="onPage" >About Me</a>
-        <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
+      <img src="assets/JLite.png" onclick="toTop()"/>
+      <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
+      <a onclick="scrollThere('test')" >About Me</a>
     </div>
     <div class="head">
-      <h2>Hello! My name is</h2>
+      <h2>Hello! I'm</h2>
       <h1>{NAME}</h1>
+      <h2>I'm a software developer</h2>
     </div>
-    <div class="page">
-        <h1>Intro</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio maxime asperiores ducimus modi aperiam sequi nisi vel voluptatum vitae explicabo, in inventore numquam sint cumque sapiente sed ipsum dolorum est, aliquid atque dolorem. Nam quam, consectetur deleniti similique eius voluptatibus quidem incidunt nostrum provident illum. Maxime tempore ullam ducimus distinctio sapiente soluta architecto omnis est, minima minus modi vero id saepe at voluptatem a earum amet corporis culpa veritatis. Nisi distinctio perspiciatis sequi magni pariatur impedit atque, repellendus inventore suscipit nulla saepe omnis aspernatur alias necessitatibus quis numquam rerum sapiente tempora exercitationem ipsam eius ducimus laborum? Atque voluptate possimus nam.</p>
-        <h1>Career Goal</h1>
+    <div class="transparentFrame"> </div>
+    <div class="page" id="about">
+      <H1> About </H1>
+      <div class="contentBox">
+        <div class="category">Education:</div> <div class="info">University of University</div>
+        <div class="category">Phone:</div> <div class="info">416-123-4567</div>
+        <div class="category">Email:</div> <div class="info">test@gmail.com</div>
+      </div>
     </div>
+    <div id="test">
+      <p> im in view</p>
+    </div>
+    
   </body>
 </html>
