--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="navbar">
       <img src="assets/JLite.png" onclick="toTop()"/>
       <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
-      <a onclick="scrollThere('test')" >About Me</a>
+      <a onclick="scrollThere('blog')" >About Me</a>
     </div>
     <div class="head">
       <h2>Hello! I'm</h2>
@@ -21,13 +21,30 @@
       <H1> About </H1>
       <div class="contentBox">
         <div class="category">Education:</div> <div class="info">University of University</div>
+      </div>
+      <div class="contentBox">
         <div class="category">Phone:</div> <div class="info">416-123-4567</div>
+      </div>
+      <div class="contentBox">
         <div class="category">Email:</div> <div class="info">test@gmail.com</div>
       </div>
+      <div class="contentBox">
+        <div class="category">skills:</div> <div class="info">stuff</div>
+      </div>
+      <div class="contentBox">
+        <div class="category">info2</div> <div class="info">stuff stuff</div>
+      </div>
+      <div class="contentBox">
+        <div class="category">info3</div> <div class="info">stuff stuff stuff</div>
+      </div>
     </div>
-    <div id="test">
-      <p> im in view</p>
+    <div class="page" id="blog">
+      <H1> Work Term Blog </H1>
+      <p>fjsgbsjgbfdkgbfd</p>
+      <p>fjsgbsjgbfdkgbfd</p>
+      <p>fjsgbsjgbfdkgbfd</p>
+      <p>fjsgbsjgbfdkgbfd</p>
     </div>
-    
+
   </body>
 </html>
