--- a/index.html
+++ b/index.html
@@ -17,34 +17,41 @@
       <h2>I'm a software developer</h2>
     </div>
     <div class="transparentFrame"> </div>
-    <div class="page" id="about">
-      <H1> About </H1>
-      <div class="contentBox">
-        <div class="category">Education:</div> <div class="info">University of University</div>
+
+    <div class="page" >
+
+      <div id="about">
+        <H1> About </H1>
+        <div class="contentBox">
+          <div class="category">Education:</div> <div class="info">University of University</div>
+        </div>
+        <div class="contentBox">
+          <div class="category">Phone:</div> <div class="info">416-123-4567</div>
+        </div>
+        <div class="contentBox">
+          <div class="category">Email:</div> <div class="info">test@gmail.com</div>
+        </div>
+        <div class="contentBox">
+          <div class="category">skills:</div> <div class="info">stuff</div>
+        </div>
+        <div class="contentBox">
+          <div class="category">info2</div> <div class="info">stuff stuff</div>
+        </div>
+        <div class="contentBox">
+          <div class="category">info3</div> <div class="info">stuff stuff stuff</div>
+        </div>
       </div>
-      <div class="contentBox">
-        <div class="category">Phone:</div> <div class="info">416-123-4567</div>
+      <div id="blog">
+        <H1> Work Term Blog </H1>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
       </div>
-      <div class="contentBox">
-        <div class="category">Email:</div> <div class="info">test@gmail.com</div>
-      </div>
-      <div class="contentBox">
-        <div class="category">skills:</div> <div class="info">stuff</div>
-      </div>
-      <div class="contentBox">
-        <div class="category">info2</div> <div class="info">stuff stuff</div>
-      </div>
-      <div class="contentBox">
-        <div class="category">info3</div> <div class="info">stuff stuff stuff</div>
-      </div>
+
+
     </div>
-    <div class="page" id="blog">
-      <H1> Work Term Blog </H1>
-      <p>fjsgbsjgbfdkgbfd</p>
-      <p>fjsgbsjgbfdkgbfd</p>
-      <p>fjsgbsjgbfdkgbfd</p>
-      <p>fjsgbsjgbfdkgbfd</p>
-    </div>
+    
 
   </body>
 </html>
