--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>My portfolio</title>
     <script src="./js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
   </head>
   <body>
-    
     <div class="head">
       <div class="navbar">
         <img src="assets/JLite.png" onclick="toTop()"/>
@@ -14,7 +14,7 @@
         <a onclick="scrollThere('blog')" >About Me</a>
       </div>
 
-      <h2 >Hello! I'm</h2>
+      <h2 style="padding-top: 5vh;">Hello! I'm</h2>
       <h1 >{NAME}</h1>
       <h2 >I'm a software developer</h2>
       
