--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <h2 style="padding-top: 5vh;">Hello! I'm</h2>
       <h1 >{NAME}</h1>
-      <h2 >I'm a software developer</h2>
+      <h2 >A software developer</h2>
       
     </div>
     <div class="transparentFrame"> </div>
