--- a/index.html
+++ b/index.html
@@ -7,45 +7,101 @@
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
   </head>
   <body>
-    <div class="head">
-      <div class="navbar">
-        <img src="assets/JLite.png" onclick="toTop()"/>
-        <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
-        <a onclick="scrollThere('blog')" >About Me</a>
-      </div>
+    <div class="navbar">
+      <img src="assets/JLite.png" onclick="toTop()"/>
+      <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
+      <a onclick="scrollThere('blog')" >About Me</a>
+    </div>
 
-      <h2 style="padding-top: 5vh;">Hello! I'm</h2>
+    <div class="head">
+      <h2 style="padding-top: 7vh;">Hello! I'm</h2>
       <h1 >{NAME}</h1>
       <h2 >A software developer</h2>
-      
     </div>
+
     <div class="transparentFrame"> </div>
 
     <div class="page" >
 
       <div id="about">
-        <H1> About </H1>
+        <h1> About </h1>
         <div class="contentBox">
-          <div class="category">Education:</div> <div class="info">University of University</div>
+          <h2>Education</h2>
+          <div class="info">
+            <h3>University of University</h3>
+
+
+          </div>
         </div>
+
         <div class="contentBox">
-          <div class="category">Phone:</div> <div class="info">416-123-4567</div>
+          <h2>Experiences</h2> 
+          <div class="info">stuff stuff</div>
         </div>
+
         <div class="contentBox">
-          <div class="category">Email:</div> <div class="info">test@gmail.com</div>
+          <h2>Skills</h2> 
+          <div class="info">stuff</div>
         </div>
+
         <div class="contentBox">
-          <div class="category">skills:</div> <div class="info">stuff</div>
+          <h2>Phone</h2> 
+          <div class="info">416-123-4567</div>
         </div>
+
         <div class="contentBox">
-          <div class="category">info2</div> <div class="info">stuff stuff</div>
+          <h2>Email</h2> 
+          <div class="info">test@gmail.com</div>
         </div>
+
         <div class="contentBox">
-          <div class="category">info3</div> <div class="info">stuff stuff stuff</div>
+          <h2>info3</h2> 
+          <div class="info">stuff stuff stuff</div>
         </div>
       </div>
+
+
       <div id="blog">
         <H1> Work Term Blog </H1>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
+        <p>fjsgbsjgbfdkgbfd</p>
         <p>fjsgbsjgbfdkgbfd</p>
         <p>fjsgbsjgbfdkgbfd</p>
         <p>fjsgbsjgbfdkgbfd</p>
