--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
         <h1> About </h1>
         <div class="contentBox">
           <h2>Education</h2>
-          <div class="info">
+          <div style="height: 50vh;" class="info">
             <h3>University of University</h3>
-
-
           </div>
         </div>
 
@@ -62,7 +60,7 @@
 
 
       <div id="blog">
-        <H1> Work Term Blog </H1>
+        <h1> Work Term Blog </h1>
         <p>fjsgbsjgbfdkgbfd</p>
         <p>fjsgbsjgbfdkgbfd</p>
         <p>fjsgbsjgbfdkgbfd</p>
