--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
   <body>
     <div class="navbar">
       <img src="assets/JLite.png" onclick="toTop()"/>
-      <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
-      <a onclick="scrollThere('blog')" >About Me</a>
+
+      <div class="dropdown">
+
+        <div>navigate</div>
+        <div class="dropdown-content">
+          <span><a href="./html/blog/blogPage.html">Work-Term Blogs</a></span>
+          <span><a onclick="scrollThere('blog')" >About Me</a></span>
+        </div>
+        
+      </div>
+      
     </div>
 
     <div class="head">
