--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
       <img src="assets/JLite.png" onclick="toTop()"/>
 
       <div class="dropdown">
-
-        <div>navigate</div>
-        <div class="dropdown-content">
-          <span><a href="./html/blog/blogPage.html">Work-Term Blogs</a></span>
-          <span><a onclick="scrollThere('blog')" >About Me</a></span>
-        </div>
-        
+        <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
+        <a onclick="scrollThere('blog')" >About Me</a>
       </div>
       
     </div>
