--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
     <div class="navbar">
       <img src="assets/JLite.png" onclick="toTop()"/>
 
-      <div class="dropdown">
-        <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
-        <a onclick="scrollThere('blog')" >About Me</a>
-      </div>
+      <a href="./html/blog/blogPage.html">Work-Term Blogs</a>
+      <a onclick="scrollThere('blog')" >About Me</a>
       
     </div>
 
     <div class="head">
       <h2 style="padding-top: 7vh;">Hello! I'm</h2>
-      <h1 >{NAME}</h1>
-      <h2 >A software developer</h2>
+      <h1>{NAME}</h1>
+      <h2>A software developer</h2>
     </div>
 
     <div class="transparentFrame"> </div>
@@ -65,49 +63,17 @@
 
       <div id="blog">
         <h1> Work Term Blog </h1>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
-        <p>fjsgbsjgbfdkgbfd</p>
+
+
+        <div class="card" >
+          <a href="sheridanPage.html" >
+            <img src="../../assets/sheridan_img.png" />
+            <h3>Applied Computing Tutor</h3>
+            <h4 style="color: white;">Sheridan College</h4>
+          </a>
+        </div> 
+
+        
       </div>
 
 
