--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="head">
-      <h2 style="padding-top: 7vh;">Hello! I'm</h2>
+      <h2 style="margin-top: 15vh;">Hello! I'm</h2>
       <h1>{NAME}</h1>
       <h2>A software developer</h2>
     </div>
@@ -65,7 +65,7 @@
 
 
         <div class="card" style="margin: auto;">
-          <a href="sheridanPage.html" >
+          <a href="./html/blog/sheridanPage.html" >
             <img src="assets/sheridan_img.png" />
             <h4>Applied Computing Tutor</h4>
             <h4 style="color: white;">Sheridan College</h4>
