--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="contentBox">
           <h2>Education</h2>
           <div style="height: 50vh;" class="info">
-            <h3>University of University</h3>
+            <h3>University of Guelph</h3>
             <div class="centerBox">
               <p class="l">Degree:</p><p class="r">Bachelor of Computing</p>
             </div>
