--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="head">
       <h2 style="margin-top: 15vh;">Hello! I'm</h2>
-      <h1>{NAME}</h1>
+      <h1>{Jay}</h1>
       <h2>A software developer</h2>
     </div>
 
@@ -49,10 +49,10 @@
         <div class="contentBox">
           <h2>Contact</h2> 
           <div class="centerBox">
-            <p class="l">Email:</p><p class="r">random@email.com</p>
+            <p class="l">Email:</p><p class="r">guangli@uoguelph.ca</p>
           </div>
           <div class="centerBox">
-            <p class="l">Phone:</p><p class="r">416-123-4567</p>
+            <p class="l">Phone:</p><p class="r">416-904-0468</p>
           </div>
         </div>
 
