--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
             <h4>Applied Computing Tutor</h4>
             <h4 style="color: white;">Sheridan College</h4>
           </a>
+        </div>
+        
+        <div class="card" style="margin: auto;">
+          <a href="./html/blog/voyixPage.html" >
+            <img src="assets/NCR_img.jpg" />
+            <h4>Backend Developer</h4>
+            <h4 style="color: white;">Sheridan College</h4>
+          </a>
         </div> 
 
         
