--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
           <a href="./html/blog/voyixPage.html" >
             <img src="assets/NCR_img.jpg" />
             <h4>Backend Developer</h4>
-            <h4 style="color: white;">Sheridan College</h4>
+            <h4 style="color: white;">NCR Voyix</h4>
+          </a>
+        </div> 
+
+        <div class="card" style="margin: auto;">
+          <a href="./html/blog/jciPage.html" >
+            <img src="assets/jci.jpg" />
+            <h4>Cloud Developer</h4>
+            <h4 style="color: white;">Johnson Controls</h4>
           </a>
         </div> 
 
