add jci2 report

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
           </a>
         </div> 
 
+        <div class="card" style="margin: auto;">
+          <a href="./html/blog/jciPage2.html" >
+            <img src="assets/jci.jpg" />
+            <h4>Cloud Developer (Part 2)</h4>
+            <h4 style="color: white;">Johnson Controls</h4>
+          </a>
+        </div> 
+
         
       </div>
 
